Insurgency: Commit long-running WIP files.
These have been uncommitted for so long that I don't even remember them. Committing to de-clutter the git state, but may need to revert if ever come back to this. Probably working somewhat well, though, since I haven't gone back to change it.

--- a/insurgency/cfg/autoexec.cfg
+++ b/insurgency/cfg/autoexec.cfg
@@ -7,6 +7,75 @@ echo "Applying autoexec"
 
 
 
+////
+//// todo
+////
+//// - adjust default loadouts to match what you normally use. maybe set by the server? might be able to create a theater for it? glean info from https://github.com/jaredballou/insurgency-theaters/tree/master/
+    // or bind keys or custom command to use `inventory_buy_weapon` command? -  https://steamcommunity.com/app/222880/discussions/3/622954302091790259/
+    // probably want to use `alias` instead of binding keys, so open console and type `sniper` for default sniper loadout, `specialist` for theirs, etc
+    // asked here - https://gaming.stackexchange.com/questions/372993/how-do-buy-binds-loadout-macros-work-in-insurgency
+//// - maybe this isn't being executing automatically when the program starts? if so probaly need to add `exec autoexec` to config.cfg
+//// - hide the hud timer ABC etc? but still wanna see when press tab or something
+// - dont switch to a grenade when picking it up - not cl_grenade_auto_switch that's about switching back to primary
+// whats hq_radio_cooldown ? look in console
+// disable cl_forcepreload b/c buggy? -- https://community.pcgamingwiki.com/topic/4571-harmful-misconceptions-in-launch-options-and-console-commandsarguments-for-source-engine-based-games/
+    // causes stuttering and lag spikes? maybe that's why you get pauses while trying to set loadout on remote servers?
+
+// todo - test if having this makes it easier to hear people talk clearly
+"snd_radio_filter" "0"
+
+// - get a radio symbol like in https://www.youtube.com/watch?v=1KB3HIUhspg when you're talking. maybe it does already? but doesn't seem like it
+// or maybe that was just in the old version? or maybe mic isn't setup correctly
+"cl_hud_voices_show_local" "1"
+
+
+cl_hud_compass_appear_enemy "4.0" // longer b/c i'm old and can't react quicklys
+
+// todo cl_hud_deathnotice_display will turn them off even when server has them turned on?
+// are there other settings to ignore the noise servers display?
+
+// todo can disable mac ctrl hotkey while playing, so that don't always switch virtual desktops while crouching?
+// this file prob can't exec shell script, but maybe can have a script that turns them off, launchs insurg, then turns them back on when insurg process quits
+// or a daemon that checks if insurg is running, and disabled it when it is, and enables it when it's not. could poll every 30 seconds or whatever
+
+// mouse sen:	5.27
+// ironsight:	1.34
+// scope:		3.02
+// mouse4 as toggle zoom, so sniper don't have to hold it down
+// mouse5 as map
+// video
+    // field of view: 75
+    // scope det: very high
+    // lens, soft part: disable
+    // glow shad qualt: very low
+    // mod /shad/ effect: low
+    // multicore enabled
+    // antialias fine to be on
+    // vscync & mot blur disable
+    // page pool mem high
+
+// audio
+    // music volume 0 so you can hear footsteps
+    // speak config 2 speak not headpohones, but wear phones
+    // sound qual high
+
+	// console: `overview_alpha .75` so can see a bit of movement if attacked while looking at map
+	// console: `bind g snd_restart` to mute sprinklers in ministry map
+
+
+
+// cant automate here, but this is the best place to document	mic sttings
+		//system: default input scarlet, outpuet headphoens
+		//steam: big picture > audio: uses system default mic. caps to talk
+		//insurg: caps to talk - can bind this
+
+
+
+
+
+
+
+
 
 // Instantly resupply at spawn
 bind "g" "inventory_resupply"
