--- a/insurgency/cfg/config.cfg
+++ b/insurgency/cfg/config.cfg
@@ -213,21 +213,21 @@ hud_stream_friendly "0"
 hud_takesshots "0"
 hud_targetid_enabled "1"
 hud_targetid_radial_duration "3.0"
-ins_bot_count_checkpoint "20"
+ins_bot_count_checkpoint "15"
 ins_bot_count_checkpoint_default "0"
-ins_bot_count_checkpoint_max "24"
-ins_bot_count_checkpoint_min "8"
+ins_bot_count_checkpoint_max "40"
+ins_bot_count_checkpoint_min "32"
 ins_bot_count_conquer "0"
-ins_bot_count_conquer_default "0"
+ins_bot_count_conquer_default "12"
 ins_bot_count_conquer_solo "8"
 ins_bot_count_hunt "25"
 ins_bot_count_hunt_default "0"
-ins_bot_count_hunt_max "26"
-ins_bot_count_hunt_min "18"
+ins_bot_count_hunt_max "25"
+ins_bot_count_hunt_min "15"
 ins_bot_count_hunt_solo "15"
 ins_bot_count_outpost "0"
 ins_bot_count_outpost_default "0"
-ins_bot_count_outpost_level_multiplier "1.1"
+ins_bot_count_outpost_level_multiplier "1.15"
 ins_bot_count_outpost_max "24"
 ins_bot_count_outpost_start_max "12"
 ins_bot_count_outpost_start_min "6"
@@ -235,10 +235,10 @@ ins_bot_count_survival "0"
 ins_bot_count_survival_day_start_max "19"
 ins_bot_count_survival_day_start_min "14"
 ins_bot_count_survival_default "0"
-ins_bot_count_survival_level_multiplier "1.05"
-ins_bot_count_survival_max "22"
-ins_bot_count_survival_start_max "10"
-ins_bot_count_survival_start_min "8"
+ins_bot_count_survival_level_multiplier "1.15"
+ins_bot_count_survival_max "24"
+ins_bot_count_survival_start_max "18"
+ins_bot_count_survival_start_min "12"
 ins_bot_quota "12"
 joy_accelmax "1"
 joy_accelscale "5"
@@ -308,14 +308,14 @@ m_pitch "0.022"
 m_rawinput "1"
 m_side "0.8"
 m_yaw "0.022"
-mat_hbao "127"
+mat_hbao "0"
 mat_insdof "0"
 mat_insdof_focaldistance_override "0"
 mat_insdof_focallength "35"
 mat_insdof_focalspeed "3.0"
 mat_insdof_fstop "22"
 mat_lensfx "0"
-mat_monitorgamma "1.800000"
+mat_monitorgamma "1.892000"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 mat_rgbfilmgrain "0"
@@ -393,8 +393,8 @@ sc_yaw_sensitivity "1.0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sdl_displayindex "1"
-sensitivity "5.267380"
+sdl_displayindex "0"
+sensitivity "5.368984"
 sk_autoaim_mode "1"
 skill "1.000000"
 snd_duckerattacktime "0.5"
@@ -413,7 +413,7 @@ spec_bank_override "0"
 spec_bank_speed "0.9"
 spec_focaldistance_delta "8"
 spec_fov "0"
-spec_fov_angle "92.000000"
+spec_fov_angle "94.000000"
 spec_fov_delta "2"
 spec_fov_lockdoftofov "0"
 spec_fov_maximum "130"
@@ -440,7 +440,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "ins_mino"
+sv_skyname "sky_buhriz_"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -459,7 +459,7 @@ viewmodel_offset_z "0.0"
 voice_enable "1"
 voice_forcemicrecord "1"
 voice_modenable "1"
-voice_scale "0.807487"
+voice_scale "0.898396"
 voice_threshold "2000"
 volume "0.893048"
 vprof_graph_averagingwindow "32"
