--- a/insurgency/cfg/server.cfg
+++ b/insurgency/cfg/server.cfg
@@ -1,4 +1,7 @@
-exec server_gamemode_global
+//exec server_gamemode_global
+	// testing, probably won't help but just in case. want to avoid having to setup individual files for all gammesdes
+	// oh, it probably _does_ apply here, but then the server_checkpoint.cfg overrides it, because it runs last
+	// asked here - https://gaming.stackexchange.com/questions/372989/how-can-i-override-all-insurgency-source-game-mode-settings
 
 echo "Applying server_solo"
 
@@ -9,24 +12,45 @@ echo "Applying server_solo"
 // see https://www.citadelservers.com/client/knowledgebase/228/List-of-gamemode-config-files-and-how-to-edit-them.html
 // https://developer.valvesoftware.com/wiki/CFG
 
+// todo probably move all this to server_solo
+
 //
 // Custom values
 //
 
 
-"mp_timer_pregame"		"0"	// timer for the pre-game (before the game starts, usually after map change or on mp_restartgame 1)
-"mp_timer_preround"		"0"		// timer for the pre-round (before the round starts, usually after a previous round ends or on mp_restartround 1)
-"mp_timer_postround"	"0"		// timer for the post-round (after the round starts)
-"mp_timer_postgame"		"0"		// timer for the post-game (at the end of a game / map rotation)
-"mp_tkpunish"		"2"		// How to punish team killing ( 0 = none, 1 = warning, 2 = kill )
-"ins_bot_quota"		"4"		// if set higher than 0, the server will add this many bots to each team.
+
+"ins_bot_quota"		"12"		// if set higher than 0, the server will add this many bots to each team.
 	// More bots means more contact, but will still want to kick bots from your team.
+	// but make some game modes worse? end too quickly, like firefight and skirmish?
+
+
 sv_lan 			"1"			 // Server is a lan server ( no heartbeat, no authentication, no non-class C addresses )
 sv_pausable 	"1"          // Is the server pausable.
 mp_minteamplayers 1
 
+// ins_timertype "1" // Defines which Timer to Use
+	// not sure what the values do, but might be useful
 
-mp_chattime "2" 		 // Length of Time (in Seconds) for Players to Commune When the Game is Over (min. 2.000000 max. 10.000000)
+// todo can setup conquere where destroying each cache lowers their numbers, rather than having to destroy them ALL to lower?
+	// if so, could setup horde mode
+	// but really you want a mode where there's no points to cap, only caches to destroy
+	// first one is hardest, but they get easier after that
+	// or maybe it should be reverse where numbers increase at each cache
 
-mp_timer_voting 10
-	// Time given to post-game voting
+// todo can i create a custom map cycle that includes all the extra maps i've downloaded?
+	// bare minimum: launch with concsole command, hardcode maps + their supported game modes
+		// it's a playlist?
+	// extras: automatically add non-core maps, see it in menus
+sv_playlist workshop_maps
+	// does ^ just register it? or launch it as default?
+
+mapcyclefile mapcycle_workshop.txt
+
+
+sv_vote_allow_spectators 1
+
+
+"sv_deadvoice"									"0"		// enabling this will allow the dead and living to VOIP each other
+"sv_deadchat"									"0"		// enabling this will allow the dead and living to chat text each other
+"sv_deadchat_team"								"1"		// is deadchat limited to just your team?
