--- a/insurgency/cfg/server_gamemode_global.cfg
+++ b/insurgency/cfg/server_gamemode_global.cfg
@@ -3,6 +3,9 @@ echo "Applying server_gamemode_global"
 // This file should be exec'd by other configs, to start with a consistent base of shared values. Include this first so they can be overridden if desired.
 // Note that `default_server_{gamemode}` is applied first, then `server_{gamemode}`, so you can rely on the defaults being there. All you have to do is override the things you want to change.
 
+// todo don't need this file, can just put these in server.cfg? that didn't seem to work before, but maybe i was diong it wrong
+	// https://steamcommunity.com/sharedfiles/filedetails/?id=345661185 section 5.3
+
 // More fun to not be restricted by supply.
 "mp_supply_token_base"		30"
 "mp_supply_token_bot_base"	30"
@@ -21,9 +24,60 @@ echo "Applying server_gamemode_global"
 "mp_roundtime"							"3600"	// Want to win/lose based on objectives, not arbitrary timer.
 "mp_spawnprotectontime"					"10"	// In most modes it doesn't make sense to allow this.
 "mp_switchteams_each_round"				"0"		// I can switch manually if I want, but usually like to stay on the same team.
+	// todo it'd be nice to switch attacking vs defending though
 "ins_bot_rpg_minimum_player_cluster"	"2"		// disable RPGs when you're playing just yourself against a team of bots. RPGs are too OP in that scenario.
+
+// "mp_friendlyfire"	"1"		// friendly fire
+	// doesn't work against bots even when console says it's set to 1? have sometimes seen it work thoughf
+	// default is 1 so shoudl be on for solo
+	// maybe works if `map {} hunt` ? -- https://steamcommunity.com/app/222880/discussions/3/1621724915771451024/#c1621724915796255794
+		// yeah, that works, but doesn't work for `map buhriz occupy` huh, it does work there too.
+		// where _doesnt_ it work? that might give clues
+		// maybe also need to do 'mp_theater_override classic' in console, OR in server mod cfg, or server.cfg?
+		// can be default or classic, maybe others. ah, yeah, see theater_* files in cfg folder
+
+
+"mp_tkpunish"		"2"		// How to punish team killing ( 0 = none, 1 = warning, 2 = kill )
+	// ^ didn't work in server.cfg, seems to here though
+	// maybe all mp_ ones need to be here?
+	// console shows this when starting game: `Playlist: Setting "mp_tkpunish" to "1"`
+	// oh, yeah, playlists have `forced_cvars` section, that's probably the problem.
+	// so, need to make a custom playlist for official maps?
+	// or maybe include official maps in your custom playlist of downloaded maps?
+		// no, that'd make it hard to find the unoffical ones. but maybe find a way to share settings between the two playlists?
+"mapcycle_disabled" "1"
+	// attempting to fix problem mentioned above
+
+
+mp_freezetime	"1" // How Long to Freeze the Player Before the Game Starts
+	// is this that pointless 15 seconds before the _round_ starts? change to 0 if ^ works
+	// well, do need time to set loadout, but there's 2 different timers, only want 1. not a big deal though.
+
+mp_timer_voting 10
+	// Time given to post-game voting
+
+"mp_timer_pregame"		"0"	// timer for the pre-game (before the game starts, usually after map change or on mp_restartgame 1)
+	// oh, i think this is how long people get to choose their loadout before the round autostarts. doesn't apply in solo because only 1 person, so just waits until you're done
+	// in real server you'd want this to be higher than default, to give yourself more time, but doesn't matter in solo
+"mp_timer_preround"		"5"		// timer for the pre-round (before the round starts, usually after a previous round ends or on mp_restartround 1)
+"mp_timer_postround"	"2"		// timer for the post-round (after the round starts)
+"mp_timer_postgame"		"3"		// timer for the post-game (at the end of a game / map rotation)
+// with all of ^ off, it's ncie and fast, but maybe don't have time to adjust loadout. is ther a setting that lets you always resuplly at spawn, or at least for X seconds?
+	// don't see any likely with `findgrep spawn` or `findgrep supply`
+	// inventory_resupply
+// console shows this when starting game:
+	//Playlist: Setting "mp_timer_pregame" to "10"
+	//Playlist: Setting "mp_timer_preround" to "15"
+	//Playlist: Setting "mp_timer_postround" to "15"
+//	Playlist: Setting "mp_timer_postgame" to "10"
+	// in insurgency-data there's a scripts/playlists/nwi folder that sets some of those options, so sometimes maybe that's overwriting these. how to overwrite playlist options?
+	// oh, came across this in a custom map description, sound relevant: "To start a solo game enable console in the settings, rebind it to f11, open the console and type "map mapname mode" for example: map estates_b4 occupy. Do this without starting a solo playlist or another map will load."
+	// it's probably the sv_playlist variable. maybe should unset that in server.cfg or here?
+	// mapybe i'm doing `map` commands wrong, and need to specify that it's a solo server explicitly?
+
+ins_bot_difficulty 0
 
 //
 // todo
-// - prevent bots on my team from throwing smoke grenades, because they prevent sniping, but let other team do it, for fairness.
 // - get a couple bots to guard my back while sniping.
+// - make it so you can resupply at spawn in all game modes
