--- a/insurgency/cfg/server_occupy.cfg
+++ b/insurgency/cfg/server_occupy.cfg
@@ -9,3 +9,24 @@ echo "Applying server_occupy"
 "mp_wave_count_perteam"		"7"		// Default of 5 feels too short for this mode, especially when global `mp_winlimit` is 2.
 "mp_wave_capture_increment"	"10"	// Closer to `mp_cp_capture_time`. Default `1` is just too fast/easy.
 
+// todo there's some problem where waves go from 7 to 0 right after game starts
+// what changed? maybe adding server_solo.cfg?
+// it was happening before adding the no_smoke theater
+// added snd_radio_filter cl_hud_voices_show_local but no reason that should affect it
+// was after adding the count 7 and cap increment i'm pretty sure, but test
+	// worked after commenting them out, so maybe that is problem? test more
+	// enabled them and it still worked, though, so maybe unrelated, or just a game bug you can't fix
+	// now it's happening again, and to push too, so can prob assume that not something in this file
+	// oh, it's happening even with all the custom stuff disabled, so maybe it's a bug with playing solo?
+	// maybe `mp_wave_dpr_attackers` et all being a fraction, it only counts you and not the bots, so it rounds down to 0? but why happens sometimes and not others?
+		// that might have worked, need more testing
+		// turned it off and ok so far, so maybe unrelated.
+		// maybe just have to restart the entire app when it happens?
+		// maybe when i kick bots, it gets messed up?
+	// could also be the difference between starting the push/occupy match via the `solo menu`, compared to doing it via `map sinjar occupy` ?
+
+
+// moved lots of stuff from server.cfg to server_gamemode_global, maybe that's it?
+
+// turn on and off manully?
+"mp_theater_override" "no_smoke"
