--- a/insurgency/cfg/server_push.cfg
+++ b/insurgency/cfg/server_push.cfg
@@ -5,3 +5,10 @@ echo "Applying server_push"
 //
 // Custom push-specific values
 //
+
+
+//mp_wave_dpr_attackers 0
+//mp_wave_dpr_defenders 0
+// testing wave bug theory
+
+mp_theater_override no_smoke
