ssh: add WIP config

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,10 +1,5 @@
 # Note: This has to be hard-linked, because ssh doesn't support symlinks.
 
-Host *
-	ServerAliveInterval 60
-	UseRoaming no
-		# See http://undeadly.org/cgi?action=article&sid=20160114142733
-
 Host vvv-personal vvv-wme
 	HostName 192.168.50.4
 	User vagrant
@@ -12,14 +7,13 @@ Host vvv-personal vvv-wme
 	UserKnownHostsFile /dev/null
 	StrictHostKeyChecking no
 	PasswordAuthentication no
-	IdentitiesOnly yes
 	ForwardAgent yes
 
 Host vvv-personal
-	IdentityFile /Users/ian/vhosts/virtual-machines/vvv-personal/.vagrant/machines/default/virtualbox/private_key
+	IdentityFile ~/vhosts/virtual-machines/vvv-personal/.vagrant/machines/default/virtualbox/private_key
 
 Host vvv-wme
-	IdentityFile /Users/ian/vhosts/virtual-machines/vvv-wme/.vagrant/machines/default/virtualbox/private_key
+	IdentityFile ~/vhosts/virtual-machines/vvv-wme/.vagrant/machines/default/virtualbox/private_key
 
 Host iandunn.name
 	Hostname durin.dreamhost.com
@@ -29,26 +23,36 @@ Host samantha
 	Hostname 142.93.19.77
 	User root
 
-Host support.wordcamp.org support marx
+Host support.wordcamp.org support marx morse
 	Hostname support.wordcamp.org
 	User wordcamp
+	#  RemoteCommand bash --rcfile ~/iandunn-dotfiles/.bashrc -i
+
+Host proxy.automattic.com
+	#IdentityFile ~/.ssh/id_rsa_automattic
 
 Host wordpress.org wordcamp.org w.org
 	Hostname iandunn.dev.ord.wordpress.org
 	User wporgdev
 	ForwardAgent yes
 
+# look into, see if helpful
+#	RequestTTY yes
+
+
 Host wordpressfoundation.org wpf
 	Hostname wordpressfoundation.org
 	User wpf
+	#  RemoteCommand bash --rcfile ~/iandunn-dotfiles/.bashrc -i
 
 Host wp15.wordpress.net
 	Hostname wp15.wordpress.net
 	User wp15
 
-Host wordpress.com wp.com
+Host wordpress.com wp.com wpcom
 	Hostname iandunn.dev.dfw.wordpress.com
 	User wpdev
+	ForwardAgent yes
 
 Host carlybish.com
 	Hostname wp543664.dreamhostps.com
@@ -68,3 +72,15 @@ Host brewsworthy.net
 	Hostname 108.163.199.140
 	User brewswor
 	Port 18765
+
+Host gutenberg.run
+	User root
+
+# Defaults need to go at the end of the file
+# See https://superuser.com/questions/718346/openssh-ssh-config-host-specific-overrides-not-working
+Host *
+	ServerAliveInterval 60
+	UseRoaming no
+		# See http://undeadly.org/cgi?action=article&sid=20160114142733
+	IdentitiesOnly yes
+	IdentityFile ~/.ssh/id_rsa
