phpcs: add compat standards

--- a/phpcs/CodeSniffer.conf
+++ b/phpcs/CodeSniffer.conf
@@ -5,7 +5,7 @@
 // You might also need to setup a symlink if the username on this device is different.
 
 $phpCodeSnifferConfig = array(
-	'installed_paths'  => '/Users/iandunn/vhosts/tools/wordpress-coding-standards/,/Users/iandunn/vhosts/tools/PHPCompatibility,/Users/iandunn/vhosts/tools/PHPCSUtils,/Users/iandunn/vhosts/tools/phpcs-variable-analysis',
+	'installed_paths'  => '/Users/iandunn/vhosts/tools/wordpress-coding-standards/,/Users/iandunn/vhosts/tools/PHPCompatibility,/Users/iandunn/vhosts/tools/PHPCompatibilityWP,/Users/iandunn/vhosts/tools/PHPCompatibilityParagonie,/Users/iandunn/vhosts/tools/PHPCSUtils,/Users/iandunn/vhosts/tools/phpcs-variable-analysis',
 	'default_standard' => 'WordPress-Extra',
 	'colors'           => 1,
 	'report_width'     => 105,
