Micro: word wrap on svn commit message

--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -6,5 +6,9 @@
     "*COMMIT_EDITMSG*": {
         "softwrap": true,
         "wordwrap": true
+    },
+    "svn-commit.tmp": {
+        "softwrap": true,
+        "wordwrap": true
     }
 }
