--- a/.subversion/config
+++ b/.subversion/config
@@ -4,4 +4,4 @@
 diff-cmd = colordiff
 
 [miscellany]
-global-ignores = .idea .git* .DS_Store debug.log local-config.php sandbox-functionality sandbox-functionality.php node_modules *.map *.diff *.patch _notes
+global-ignores = .idea .git* .DS_Store debug.log local-config.php sandbox-functionality 0-sandbox-functionality.php node_modules *.map *.diff *.patch _notes
