--- a/insurgency/cfg/config-qwerty.cfg
+++ b/insurgency/cfg/config-qwerty.cfg
@@ -9,33 +9,34 @@ bind "6" "slot6"
 bind "7" "slot7"
 bind "8" "slot8"
 bind "9" "slot9"
-bind "r" "+moveleft"
+bind "a" "+moveleft"
 bind "b" "+use_accessory"
 bind "c" "+radialmenu"
-bind "t" "+moveright"
-bind "p" "+leanright"
-bind "g" "+use"
-bind "a" "inventory_resupply"
+bind "d" "+moveright"
+bind "e" "+leanright"
+bind "f" "+use"
+bind "g" "inventory_resupply"
 bind "h" "snd_restart"
 bind "m" "changeinventory"
-bind "w" "+leanleft"
-bind "d" "+reload"
+bind "q" "+leanleft"
+bind "r" "+reload"
 bind "s" "+back"
+bind "t" "+flashlight"
 bind "u" "messagemode2"
 bind "v" "+compass"
-bind "f" "+forward"
+bind "w" "+forward"
 bind "x" "+firemode"
 bind "y" "messagemode"
-bind "TAB" "+prone"
+bind "z" "+prone"
 bind "`" "toggleconsole"
 bind "," "changesquad"
 bind "." "changeteam"
-bind "BACKSPACE" "+jump"
-bind "JOY7" "+score"
+bind "SPACE" "+jump"
+bind "TAB" "+score"
 bind "CAPSLOCK" "+voicerecord"
 bind "ESCAPE" "cancelselect"
 bind "SHIFT" "+sprint"
-bind "z" "+toggle_duck"
+bind "ALT" "+toggle_duck"
 bind "CTRL" "+duck"
 bind "F3" "askconnect_accept"
 bind "F5" "jpeg"
@@ -48,10 +49,13 @@ bind "MWHEELDOWN" "scrolldown"
 bind "JOY1" "+jump"
 bind "JOY2" "toggle_duck"
 bind "JOY3" "+reload"
+bind "JOY4" "+use"
 bind "JOY5" "+firemode"
 bind "JOY6" "+grenade"
+bind "JOY7" "+score"
 bind "JOY8" "pause"
 bind "JOY9" "+speed"
+bind "JOY10" "+prone"
 bind "POV_UP" "scrollup"
 bind "POV_RIGHT" "+leanright"
 bind "POV_DOWN" "scrolldown"
@@ -176,7 +180,7 @@ cl_rumblescale "1.0"
 cl_showhelp "1"
 cl_showpluginmessages "1"
 cl_soundfile ""
-cl_spec_mode "6"
+cl_spec_mode "4"
 cl_team "default"
 cl_team_colors_relative "1"
 cl_thirdperson_obstruct_color "0"
@@ -209,21 +213,21 @@ hud_stream_friendly "0"
 hud_takesshots "0"
 hud_targetid_enabled "1"
 hud_targetid_radial_duration "3.0"
-ins_bot_count_checkpoint "20"
+ins_bot_count_checkpoint "15"
 ins_bot_count_checkpoint_default "0"
-ins_bot_count_checkpoint_max "24"
-ins_bot_count_checkpoint_min "8"
+ins_bot_count_checkpoint_max "40"
+ins_bot_count_checkpoint_min "32"
 ins_bot_count_conquer "0"
-ins_bot_count_conquer_default "0"
+ins_bot_count_conquer_default "12"
 ins_bot_count_conquer_solo "8"
 ins_bot_count_hunt "25"
 ins_bot_count_hunt_default "0"
-ins_bot_count_hunt_max "26"
-ins_bot_count_hunt_min "18"
+ins_bot_count_hunt_max "25"
+ins_bot_count_hunt_min "15"
 ins_bot_count_hunt_solo "15"
 ins_bot_count_outpost "0"
 ins_bot_count_outpost_default "0"
-ins_bot_count_outpost_level_multiplier "1.1"
+ins_bot_count_outpost_level_multiplier "1.15"
 ins_bot_count_outpost_max "24"
 ins_bot_count_outpost_start_max "12"
 ins_bot_count_outpost_start_min "6"
@@ -231,11 +235,11 @@ ins_bot_count_survival "0"
 ins_bot_count_survival_day_start_max "19"
 ins_bot_count_survival_day_start_min "14"
 ins_bot_count_survival_default "0"
-ins_bot_count_survival_level_multiplier "1.05"
-ins_bot_count_survival_max "22"
-ins_bot_count_survival_start_max "10"
-ins_bot_count_survival_start_min "8"
-ins_bot_quota "0"
+ins_bot_count_survival_level_multiplier "1.15"
+ins_bot_count_survival_max "24"
+ins_bot_count_survival_start_max "18"
+ins_bot_count_survival_start_min "12"
+ins_bot_quota "12"
 joy_accelmax "1"
 joy_accelscale "5"
 joy_accelscalepoly "0.4"
@@ -390,7 +394,7 @@ scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
 sdl_displayindex "0"
-sensitivity "3.032085"
+sensitivity "5.368984"
 sk_autoaim_mode "1"
 skill "1.000000"
 snd_duckerattacktime "0.5"
@@ -436,7 +440,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_insurgency03a_dark"
+sv_skyname "sky_buhriz_"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
