insurgency: merge with old config

--- a/insurgency/cfg/config.cfg
+++ b/insurgency/cfg/config.cfg
@@ -9,33 +9,33 @@ bind "6" "slot6"
 bind "7" "slot7"
 bind "8" "slot8"
 bind "9" "slot9"
-bind "r" "+moveleft"
+bind "a" "inventory_resupply"
 bind "b" "+use_accessory"
 bind "c" "+radialmenu"
-bind "t" "+moveright"
-bind "p" "+leanright"
+bind "d" "+reload"
+bind "f" "+forward"
 bind "g" "+use"
-bind "a" "inventory_resupply"
 bind "h" "snd_restart"
 bind "m" "changeinventory"
-bind "w" "+leanleft"
-bind "d" "+reload"
+bind "p" "+leanright"
+bind "q" "+score"
+bind "r" "+moveleft"
 bind "s" "+back"
+bind "t" "+moveright"
 bind "u" "messagemode2"
 bind "v" "+compass"
-bind "f" "+forward"
-bind "x" "+firemode"
+bind "w" "+leanleft"
 bind "y" "messagemode"
-bind "TAB" "+prone"
+bind "z" "+toggle_duck"
 bind "`" "toggleconsole"
 bind "," "changesquad"
 bind "." "changeteam"
 bind "BACKSPACE" "+jump"
-bind "JOY7" "+score"
+bind "TAB" "+prone"
 bind "CAPSLOCK" "+voicerecord"
 bind "ESCAPE" "cancelselect"
+bind "DEL" "+firemode"
 bind "SHIFT" "+sprint"
-bind "z" "+toggle_duck"
 bind "CTRL" "+duck"
 bind "F3" "askconnect_accept"
 bind "F5" "jpeg"
@@ -176,7 +176,7 @@ cl_rumblescale "1.0"
 cl_showhelp "1"
 cl_showpluginmessages "1"
 cl_soundfile ""
-cl_spec_mode "6"
+cl_spec_mode "4"
 cl_team "default"
 cl_team_colors_relative "1"
 cl_thirdperson_obstruct_color "0"
@@ -209,21 +209,21 @@ hud_stream_friendly "0"
 hud_takesshots "0"
 hud_targetid_enabled "1"
 hud_targetid_radial_duration "3.0"
-ins_bot_count_checkpoint "20"
+ins_bot_count_checkpoint "15"
 ins_bot_count_checkpoint_default "0"
-ins_bot_count_checkpoint_max "24"
-ins_bot_count_checkpoint_min "8"
+ins_bot_count_checkpoint_max "40"
+ins_bot_count_checkpoint_min "32"
 ins_bot_count_conquer "0"
-ins_bot_count_conquer_default "0"
+ins_bot_count_conquer_default "12"
 ins_bot_count_conquer_solo "8"
 ins_bot_count_hunt "25"
 ins_bot_count_hunt_default "0"
-ins_bot_count_hunt_max "26"
-ins_bot_count_hunt_min "18"
+ins_bot_count_hunt_max "25"
+ins_bot_count_hunt_min "15"
 ins_bot_count_hunt_solo "15"
 ins_bot_count_outpost "0"
 ins_bot_count_outpost_default "0"
-ins_bot_count_outpost_level_multiplier "1.1"
+ins_bot_count_outpost_level_multiplier "1.15"
 ins_bot_count_outpost_max "24"
 ins_bot_count_outpost_start_max "12"
 ins_bot_count_outpost_start_min "6"
@@ -231,11 +231,11 @@ ins_bot_count_survival "0"
 ins_bot_count_survival_day_start_max "19"
 ins_bot_count_survival_day_start_min "14"
 ins_bot_count_survival_default "0"
-ins_bot_count_survival_level_multiplier "1.05"
-ins_bot_count_survival_max "22"
-ins_bot_count_survival_start_max "10"
-ins_bot_count_survival_start_min "8"
-ins_bot_quota "0"
+ins_bot_count_survival_level_multiplier "1.15"
+ins_bot_count_survival_max "24"
+ins_bot_count_survival_start_max "18"
+ins_bot_count_survival_start_min "12"
+ins_bot_quota "12"
 joy_accelmax "1"
 joy_accelscale "5"
 joy_accelscalepoly "0.4"
@@ -423,7 +423,7 @@ spec_interpolate_position "0"
 spec_interpolate_position_smoothing "0.9"
 spec_interpolate_smoothing "0.9"
 spec_scoreboard "0"
-spec_xray "0"
+spec_xray "1"
 spec_xray_demo "0"
 suitvolume "0.25"
 sv_forcepreload "0"
@@ -436,7 +436,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_insurgency03a_dark"
+sv_skyname "sky_height_"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
