insurgency: tweak hotkeys

--- a/insurgency/cfg/autoexec.cfg
+++ b/insurgency/cfg/autoexec.cfg
@@ -60,7 +60,6 @@ cl_hud_compass_appear_enemy "4.0" // longer b/c i'm old and can't react quicklys
     // sound qual high
 
 	// console: `overview_alpha .75` so can see a bit of movement if attacked while looking at map
-	// console: `bind g snd_restart` to mute sprinklers in ministry map
 
 
 
@@ -74,19 +73,19 @@ cl_hud_compass_appear_enemy "4.0" // longer b/c i'm old and can't react quicklys
 
 
 
+//// Functions you can't bind through the UI
 
-
-
-// Instantly resupply at spawn
-bind "g" "inventory_resupply"
+// Instantly resupply at spawn1
+bind "a" "inventory_resupply"
 
 // Mute annoying sounds like sprinkers (have to press every time they start going off again)
 // also stops pre-game announcer describing the mission
-bind "h" "snd_restart"
-    // todo maybe something on left hand, so don't have to leave mouse? t? e? f?
+bind "k" "snd_restart"
 
-// Pressing 1 goes to sidearm if you don't have a primary
-bind "1" "slot2;slot1"
+// todo maybe something on left hand, so don't have to leave mouse? t? e? f?
+
+
+//// Performance
 
 // Update player locations as quickly as possible, if the server supports it
 // See https://www.reddit.com/r/insurgency/comments/57mn87/whats_up_with_people_playing_at_a_128/d8tejnc/
