--- a/insurgency/cfg/config.cfg
+++ b/insurgency/cfg/config.cfg
@@ -1,29 +1,29 @@
 unbindall
 bind "0" "slot0"
-bind "1" "slot2;slot1"
-bind "2" "slot2"
+bind "1" "toggleprimarysecondary"
 bind "3" "slot3"
 bind "4" "slot4"
 bind "5" "slot5"
-bind "6" "slot6"
 bind "7" "slot7"
 bind "8" "slot8"
 bind "9" "slot9"
-bind "a" "inventory_resupply"
 bind "b" "+use_accessory"
 bind "c" "+radialmenu"
 bind "d" "+reload"
 bind "f" "+forward"
 bind "g" "+use"
-bind "h" "snd_restart"
+bind "l" "InsRadial affirmative"
+bind "u" "InsRadial negative"
+bind "n" "InsRadial enemy"
+bind "e" "InsRadial covering"
+bind "i" "InsRadial need_backup"
 bind "m" "changeinventory"
 bind "p" "+leanright"
 bind "q" "+score"
 bind "r" "+moveleft"
 bind "s" "+back"
 bind "t" "+moveright"
-bind "u" "messagemode2"
-bind "v" "+compass"
+bind "v" "togglecompass"
 bind "w" "+leanleft"
 bind "y" "messagemode"
 bind "z" "+toggle_duck"
@@ -36,7 +36,6 @@ bind "CAPSLOCK" "+voicerecord"
 bind "ESCAPE" "cancelselect"
 bind "DEL" "+firemode"
 bind "SHIFT" "+sprint"
-bind "CTRL" "+duck"
 bind "F3" "askconnect_accept"
 bind "F5" "jpeg"
 bind "MOUSE1" "+attack"
